mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_wrong_arg_count.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: 'foo' expects 2 argument(s), but 1 was provided
--> test_scripts/error_cases/semantic_wrong_arg_count.mux:5:10
   |
 5 | auto x = foo(1)
   |          ^^^
   |
= help: Not enough arguments. 'foo' requires 2 argument(s).
